appId: com.anonymous.TerraOffRoad
---
- launchApp
- assertVisible: ".*"

- tapOn:
    text: "OK"
    optional: true
- tapOn:
    text: "NO THANKS"
    optional: true
- tapOn:
    text: "No thanks"
    optional: true

- waitForAnimationToEnd


- assertVisible: 
    id: "hamburger-menu-button"