appId: com.anonymous.TerraOffRoad
continueOnFailure: true
---
- runFlow: ../.maestro/test_setup_app.yaml

# Navigate to Gear tab
- assertVisible:
    id: gear-tab
- tapOn:
    id: gear-tab

# Add Gear Item to Vehicle Items section
- tapOn:
    id: add-item-button-vehicle-items
- tapOn:
    id: add-item-input-vehicle_items
- inputText: "spare tire"
- tapOn:
    id: add-item-confirm-vehicle_items

# Cleanup
- runFlow: ../.maestro/test_cleanup_app.yaml
