appId: com.anonymous.TerraOffRoad
continueOnFailure: true
---
- runFlow: ../.maestro/test_setup_app.yaml

- assertVisible:
    id: gear-tab
- tapOn:
    id: gear-tab

# Test inital elements are displayed
- assertVisible: section-title-vehicle-items
- assertVisible: section-title-shelter
- assertVisible: section-title-sleeping-system
- assertVisible: section-title-emergency/medical
- assertVisible: section-title-clothing

# Test each section button is individually visible
- assertVisible: add-item-button-Vehicle Items
- assertVisible: add-item-button-Shelter
- assertVisible: add-item-button-Sleeping System
- assertVisible: add-item-button-Emergency/Medical
- assertVisible: add-item-button-Clothing
- swipe:
    direction: UP
- assertVisible: add-item-button-Cooking
- assertVisible: add-item-button-Food
- assertVisible: add-item-button-Hygiene
- swipe:
    direction: UP
- assertVisible: add-item-button-Lighting/Signaling
- assertVisible: add-item-button-Electronics
- assertVisible: add-item-button-Misc

#Cleanup
- repeat: 
    times: 2
    commands:
      - swipe:
          direction: DOWN

- runFlow: ../.maestro/test_cleanup_app.yaml 






